Update protobuf.
